# diana-dasm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  revision_history.txt
artem/src/: diana_9_0.sln
src/: CMakeLists.txt  diana_14_0.sln  diana_9_0.sln  orthia_9_0.sln  start.bat
src/diana_core/diana_core/: diana_allocators.c  diana_analyze.c  diana_analyze.h  diana_apply_config_rules.h  diana_c_runtime.inc  diana_config.h  diana_core.c  diana_core.h  diana_core_14_0.vcxproj  diana_core_14_0.vcxproj.filters  diana_core_9_0.vcproj  diana_core_cpp.h  diana_core_utils.h  diana_custom_config.inc  diana_gen.c  diana_list.c  diana_operands.c  diana_patchers.c  diana_pe.c  diana_pe.h  diana_pe_analyzer.c  diana_pe_analyzer.h  diana_pe_defs.h  diana_processor_cpp.h  diana_stack.c  diana_stack.h  diana_stream_proxy.c  diana_streams.c  diana_tables_common.h  diana_text_output_masm.c
src/diana_core/diana_core_tests/: diana_core_tests_14_0.vcxproj  diana_core_tests_14_0.vcxproj.filters  main.cpp  test_add.h  test_analyze.cpp  test_common.cpp  test_common.h  test_imul.cpp  test_imul.h  test_integrated.cpp  test_jmp.h  test_mov.cpp  test_patchers.cpp  test_processor_impl.h  test_x64_integrated.cpp
src/diana_core/diana_processor/: diana_processor.vcproj  diana_processor_cmd_internal.c  diana_processor_cmd_internal_xmm.c  diana_processor_cmd_m.h  diana_processor_cmd_m_xmm.h  diana_processor_cmd_p.c  diana_processor_cmd_s.h  diana_processor_commands.c  diana_processor_commands.h  diana_processor_core.c  diana_processor_core.h  diana_processor_core_impl.c  diana_processor_core_impl.h  diana_processor_core_impl_xmm.h  diana_processor_impl_init.h  diana_processor_specific_xmm.h
src/diana_core/diana_processor_tests/: diana_processor_tests.vcxproj  diana_processor_tests.vcxproj.filters  gen.cpp  main.cpp  test_processor_a.cpp  test_processor_b.cpp  test_processor_flags.cpp  test_processor_i.cpp  test_processor_impl.h  test_processor_m.cpp  test_processor_m_xmm.cpp  test_processor_n.cpp  test_processor_o.cpp
(+753 files in other folders)
